Fix watchlist btn on mobile

--- a/style.css
+++ b/style.css
@@ -291,7 +291,7 @@ a:focus {
         max-width: 77px;
     }
     .watchlist-btn {
-        max-width: 80px;
+        max-width: 83px;
     }
 }
 .card-watchlist:hover,
